--- a/ES2015.md
+++ b/ES2015.md
@@ -34,3 +34,11 @@ toString() {
 # Async/Await
 
 http://cnodejs.org/topic/5640b80d3a6aa72c5e0030b6
+
+遍历数组形式的异步操作
+
+```js
+await Promise.all(async arr.map(function (e,i) {
+    await operation...
+}))
+```
