--- a/ES2015.md
+++ b/ES2015.md
@@ -38,7 +38,7 @@ http://cnodejs.org/topic/5640b80d3a6aa72c5e0030b6
 遍历数组形式的异步操作
 
 ```js
-await Promise.all(async arr.map(function (e,i) {
+await Promise.all(arr.map(async function (e,i) {
     await operation...
 }))
 ```
