--- a/javascript/interview/browser/1.md
+++ b/javascript/interview/browser/1.md
@@ -6,6 +6,7 @@
 * 浏览器的工作原理
 * 重绘 回流
 * 页面阻塞
+* event passive
 
 ---
 
@@ -55,4 +56,15 @@ getComputedStyle/getBoundingClientRect
 
 CSS不会阻塞DOM的解析，但会阻塞 DOM 渲染。
 JS阻塞DOM解析，但浏览器会"偷看"DOM，预先下载相关资源。
-浏览器遇到script且没有defer或async属性时，会触发页面渲染，因而如果前面CSS资源尚未加载完毕时，浏览器会等待它加载完毕在执行脚本。
+浏览器遇到script且没有defer或async属性时，会触发页面渲染，因而如果前面CSS资源尚未加载完毕时，浏览器会等待它加载完毕再执行脚本。
+
+* event passive
+
+passive主要用于优化浏览器页面滚动性能。告诉浏览器虽然主线程监听了事件，但不会调用preventDefault，合成线程不需要等待。
+渲染进程：tab内的所有事情处理。分为主线程、工作线程、合成线程、光栅线程等。
+主线程：dom解析/预加载扫描/css解析/布局/paint
+合成线程：图层合成，调用光栅线程，标注非快速滚动区(表示绑定了事件，需要等待主线程处理完)，处理部分快速用户事件(这部分事件不需要主线程参与，合成线程直接处理)
+
+事件委托会导致更大的区域变成非快速滚动区
+
+https://zhuanlan.zhihu.com/p/102149546
