--- a/javascript/interview/browser/1.md
+++ b/javascript/interview/browser/1.md
@@ -47,8 +47,7 @@ https://developer.mozilla.org/zh-CN/docs/Web/Performance/%E6%B5%8F%E8%A7%88%E5%9
 
 repaint：当元素样式的改变不影响布局时，浏览器将使用重绘对元素进行更新，此时由于只需要UI层面的重新像素绘制，因此损耗较少
 reflow：当元素的尺寸、结构或触发某些属性时，浏览器会重新渲染页面，称为回流。此时，浏览器需要重新经过计算，计算后还需要重新页面布局，因此是较重的操作。
-页面初次渲染/窗口大小改变/元素尺寸、位置、内容改变/字体大小/添加或者删除可见元素/查询某些属性或调用某些方法
-getComputedStyle/getBoundingClientRect
+页面初次渲染/窗口大小改变/元素尺寸、位置、内容改变/字体大小/添加或者删除可见元素/查询某些属性或调用某些方法getComputedStyle/getBoundingClientRect
 
 动画效果应用到absolute或fixed的元素上/DOM使用documentFragment一次性插入，减少操作次数
 
