--- a/javascript/interview/browser/1.md
+++ b/javascript/interview/browser/1.md
@@ -8,6 +8,7 @@
 * 页面阻塞
 * event passive
 * mvc mvvm
+* 缓存
 
 ---
 
@@ -73,3 +74,8 @@ https://zhuanlan.zhihu.com/p/102149546
 
 mvc: controller处理所有事务（通信/model/view）,后端模式
 mvvm: viewModel只是一个中间层，联系model和view，前端模式
+
+* 缓存
+
+强制缓存:expires/cache-control
+协商缓存:last-modified/etag
